--- a/PlainNote.tex
+++ b/PlainNote.tex
@@ -4,7 +4,7 @@
 % title
 % -------------------
 
-\thetitle{Holly molly}{\today}{serenity}
+\thetitle{PlainNotes}{\today}{serenity}
 
 
 % -------------------
@@ -18,30 +18,12 @@
 
 \begin{abstract}
 
-
-  This is a PDF powered by \LaTeX. I will never teach you how to use it unless you know.
-
 \end{abstract}
 
 
-\section{Introduction}
-
-\begin{theorem}{1}
-wo shi da shuai ge.
-\tcblower
-\begin{proof}{1}
-It does not need any proofs.
-\end{proof}
-\end{theorem}
-
-\begin{lemma}{what lemma}
-This is a lemma
-\end{lemma}
-
-\begin{corollary}{what corollary}
-This is a corollary
-\end{corollary}
-
+\begin{corbox}{sa}
+asd
+\end{corbox}
 
 
 \end{document}
